# rust-pgrestore-web

./: .editorconfig  Cargo.toml  README.md
public/: index.html
public/static/js/: Application.js  Pattern.js  Storage.js  components.js  handlers.js  init.js
public/static/js/components/: ExportDialog.html  ExportDialog.js  ImportDialog.html  ImportDialog.js  Jobs.html  Jobs.js  ParseDialog.html  ParseDialog.js  Restore.html  Restore.js  Search.html  Search.js  Settings.html  Settings.js  Status.html  Status.js
src/: config.rs  error.rs  main.rs  options.rs  server.rs
src/config/: error.rs  mod.rs  validate.rs
src/handler/: abort.rs  destination.rs  error.rs  jobs.rs  mod.rs  restore.rs  search.rs  settings.rs  status.rs  util.rs
src/http/: error.rs  mod.rs
src/jobmanager/: error.rs  job.rs  mod.rs
src/pathmanager/: error.rs  mod.rs
src/worker/: command.rs  error.rs  mod.rs
src/worker/restore/: command.rs  entity.rs  error.rs  index.rs  mod.rs
src/worker/restore/postgres/: error.rs  mod.rs
src/worker/search/: error.rs  mod.rs
