[package]
name = "pgrestore-web"
version = "0.1.0"
authors = ["Anton Shabanov <snakesolid@ngs.ru>"]

[profile.release]
lto = true
codegen-units = 1

[dependencies]
env_logger = "0.5"
iron = "0.6"
log = "0.4"
mount = "0.4"
router = "0.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
staticfile = "0.5"
structopt = "0.2"
time = "0.1"
