[package]
name = "pgrestore-web"
version = "0.1.5"
authors = ["Anton Shabanov <snakesolid@ngs.ru>"]
edition = "2018"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
env_logger = "0.9"
iron = "0.6"
iron-cors = "0.8"
log = "0.4"
mount = "0.4"
postgres = "0.19"
router = "0.6"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
staticfile = "0.5"
structopt = "0.3"
time = "0.3"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = [ "blocking", "gzip", "rustls-tls" ]

[dependencies.serde]
version = "1.0"
features = [ "derive" ]
